--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcc 'F001'
 - !lcsh 'Fires -- Massachusetts -- Chelsea'
 - !lcsh 'Fires'
+- GITenberg
 title: 'Souvenir Book of the Great Chelsea Fire April 12, 1908
 
   Containing Thirty-Four Views of the Burned District and Prominent Buildings'
